# xray-viewer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  setup_project.ps1
src/: main.cpp
src/image/: ImageBuffer.cpp  ImageBuffer.h  ImageProcessor.cpp  ImageProcessor.h  TiffLoader.cpp  TiffLoader.h
src/ui/: MainWindow.cpp  MainWindow.h
